WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136173
Fix showing paint rects when selecting lines in the timeline
https://bugs.webkit.org/show_bug.cgi?id=136173
Summary
Fix showing paint rects when selecting lines in the timeline
Simon Fraser (smfr)
Reported
2014-08-22 14:59:45 PDT
Fix showing paint rects when selecting lines in the timeline
Attachments
Patch
(1.51 KB, patch)
2014-08-22 15:00 PDT
,
Simon Fraser (smfr)
joepeck
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-08-22 15:00:27 PDT
Created
attachment 237000
[details]
Patch
Joseph Pecoraro
Comment 2
2014-08-22 15:01:20 PDT
Comment on
attachment 237000
[details]
Patch r=me
Simon Fraser (smfr)
Comment 3
2014-08-22 15:10:23 PDT
https://trac.webkit.org/r172873
Radar WebKit Bug Importer
Comment 4
2014-08-22 15:10:58 PDT
<
rdar://problem/18107363
>
Simon Fraser (smfr)
Comment 5
2014-09-04 16:06:46 PDT
***
Bug 136167
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug