Fix showing paint rects when selecting lines in the timeline https://bugs.webkit.org/show_bug.cgi?id=136173

Reviewed by Joseph Pecoraro.

Fix the condition used to decide when to show the overlay.

* inspector/InspectorOverlay.cpp:
(WebCore::InspectorOverlay::shouldShowOverlay):

Canonical link: https://commits.webkit.org/154005@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172873 268f45cc-cd09-0410-ab3c-d52691b4dbfc